fix dark mode

--- a/docs/assets/css/main2.scss
+++ b/docs/assets/css/main2.scss
@@ -16,3 +16,7 @@
 ::-moz-selection {
 	background: #f21368;
 }
+
+[data-aw2-key] .aw2-show-key{
+	background-color: rgba(255, 255, 255, 0.2);
+}
